--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.9.0",
     "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-dotenv": "^2.4.0",
