--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "axios": "^0.20.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-hook-form": "^6.8.4",
     "react-native": "0.63.2",
     "react-native-dotenv": "^2.4.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
