--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "axios": "^0.20.0",
+    "moment": "^2.29.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-hook-form": "^6.8.4",
